--- a/certify/public/index.html
+++ b/certify/public/index.html
@@ -28,7 +28,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Decentralized Cloud</title>
+    <link rel = "icon" href = 
+    "./images/bb2.png" 
+            type = "image/x-icon">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
